styles/main.css
/* ... */
.play-btn:hover {
    transform: scale(1.1);
}

.pause-btn {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) !important;
    z-index: 1;
    width: 80px;
    height: 80px;
    cursor: inherit !important;
    transform: scale(1);
    transition: 0.5s;
    opacity: 0;
}

.banner-ratio:hover .pause-btn {
    opacity: 1;
}

.brand-image {
    /* box-shadow: inset 0px 0px 10px rgba(0,0,0,0.9); */
    height: 100%;
    width: 100%;
    border: 1px solid #fff;
    border-radius: 100px;
    transition: all 0.5s;
    position: relative;
    z-index: -200;
    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15);
    object-fit: scale-down;
}

.category-circle {
    transition: all 0.5s;
}

.category-circle:hover,
.category-circle.active {
    -webkit-box-shadow: inset 0px 0px 10px 9px rgba(0, 0, 0, 5%);
    -moz-box-shadow: inset 0px 0px 10px 9px rgba(0, 0, 0, 5%);
    box-shadow: inset 0px 0px 10px 9px rgba(0, 0, 0, 5%);
    border-radius: 100px;
}

.brand-image-swiper img {
    height: 150px;
    width: 150px;
}

.brand-image:hover,
.brand-image.active {
    box-shadow: inset 0 .5rem 1rem rgba(0, 0, 0, .15);
    transform: scale(1.05);
}

.product-ratio {
    padding-top: 90%;
}

.logo-product img {
    width: 100px;
    height: 100px;
}

.product-ratio img {
    object-fit: contain;
}

.product-bg {
    background-color: #ccd7e02e;
    border-top-right-radius: 60px;
    border-bottom-right-radius: 60px;
}

.color-1 {
    cursor: inherit !important;
    border: 1px solid #A03444;
    border-bottom: 1px solid #A03444;
    border-top: 1px solid #A03444;
    border-left: 1px solid #A03444;
    border-right: 1px solid #A03444;
    width: 30px;
    height: 30px;
    background: #A03444;
    border-radius: 6px;
}

.color-2 {
    cursor: inherit !important;
    border: 1px solid #044131;
    border-bottom: 1px solid #044131;
    border-top: 1px solid #044131;
    border-left: 1px solid #044131;
    border-right: 1px solid #044131;
    width: 30px;
    height: 30px;
    background: #044131;
    border-radius: 6px;
}

.color-3 {
    cursor: inherit !important;
    border: 1px solid #000;
    border-bottom: 1px solid #000;
    border-top: 1px solid #000;
    border-left: 1px solid #000;
    border-right: 1px solid #000;
    width: 30px;
    height: 30px;
    background: #000;
    border-radius: 6px;
}

.color-4 {
    cursor: inherit !important;
    border: 1px solid #C99A93;
    border-bottom: 1px solid #C99A93;
    border-top: 1px solid #C99A93;
    border-left: 1px solid #C99A93;
    border-right: 1px solid #C99A93;
    width: 30px;
    height: 30px;
    background: #C99A93;
    border-radius: 6px;
}

.product p {
    font-size: 1.25rem;
    color: #14334A;
}

.disclaimer p {
    font-size: 0.9rem;
    color: #14334A;
}

.swiper-button-next img,
.swiper-button-prev img {
    width: 80px;
    height: 80px;
}

.swiper-button-next:after,
.swiper-container-rtl .swiper-button-prev:after {
    content: '' !important;
}

.swiper-button-prev:after,
.swiper-container-rtl .swiper-button-next:after {
    content: '' !important;
}

.swiper-button-prev,
.swiper-rtl .swiper-button-next {
    left: 170px !important;
}

.swiper-button-next,
.swiper-rtl .swiper-button-prev {
    right: 170px !important;
}

/* products */

/* service categories */
.blue-pill {
    position: relative;
    border: 1px solid #14334A;
    background-color: #14334A;
    border-radius: 100px;
    height: 98px;
    transition: all 2s;
}

.blue-circle {
    position: absolute;
    top: 0;
    left: 0;
    transition: all 0.5s;
    height: 100%;
    border-radius: 3.4375rem;
    z-index: 2;
    box-shadow: 0px 8px 15px #0003;
}

.blue-pill:hover .blue-circle {
    left: 100%;
    transition: all 0.5s;
    transform: translateX(-100%);
}

.remove-on-hover {
    color: #fff;
    font-weight: 600;
    font-size: 1.25rem;
    height: 100%;
    opacity: 1;
    align-self: center;
    display: flex;
    align-items: center;
    justify-content: center;
    padding-left: 100px;
    padding-right: 20px;
}

.show-on-hover {
    color: #fff;
    font-weight: 600;
    font-size: 1.25rem;
    display: none;
    height: 100%;
    opacity: 1;
    align-items: center;
    justify-content: center;
    padding-right: 100px;
    padding-left: 20px;
}

.blue-pill:hover .remove-on-hover {
    /* opacity: 0; */
    display: none;
}

.blue-pill:hover .show-on-hover {
    display: flex;
    height: 100%;
    opacity: 1;
    align-self: center;
    display: grid;
}


/* services */

.single-service p {
    color: #14334A;
}

.service-title-page {
    color: #14334A;
    font-weight: 900;
    font-size: 1.875rem;
}

.services h2 {
    color: #14334A;
}

.back-button {
    border: 1px solid #14334A;
    color: #14334A;
    background: #fff;
    padding: 4px 10px;
}

.back-button p {
    font-size: 12px;
}

.arrow-stroke {
    transition: all 0.5s;
}

.back-button:hover .arrow-stroke {
    stroke: #fff;
}

.back-button:hover {
    background: #14334A;
    color: #fff;
}

.services p {
    font-size: 1.25rem;
    color: #14334A;
}

.service-section {
    overflow: hidden;
    border-radius: 50px;
}

.service-title {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    text-align: center;
    background-color: #CCD7E0;
    color: #14334A;
}

.service-title h4,
.service-on-hover h4 {
    font-size: 1.25rem;
    font-weight: bold;
}

.service-on-hover h5 {
    font-size: 1.25rem;
}

.service-on-hover p {
    cursor: inherit !important;
    font-size: 1.25rem;
}

.service-on-hover {
    cursor: inherit !important;
    color: #14334A;
    opacity: 0;
    position: absolute;
    bottom: 0;
    left: 0;
    height: 0;
    width: 100%;
    text-align: center;
    background-color: #CCD7E0;
    transition: all 0.5s;
    /* border-radius: 50px; */
}

.service-content {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 80%;
    transform: translate(-50%, -50%);
}
/* ... */

